# local-gpt

./: LICENSE  README.md  pyproject.toml
src/: ask.py
